finished MudBlazor initial implementation

--- a/PaymentJournal.Web/Pages/Components/AccountLists.razor
+++ b/PaymentJournal.Web/Pages/Components/AccountLists.razor
@@ -1,6 +1,4 @@
-﻿
-
-<MudPaper Width="30%" Square="false" Class="pa-5 ma-2 infobox" Outlined="true">
+﻿<MudPaper Width="30%" Square="false" Class="pa-5 ma-2 infobox" Outlined="true">
     <MudText>Account Legend</MudText>
     <MudSimpleTable Class="bg-trans" Outlined="false" Dense="true" Elevation="0">
         <thead>
