--- a/PaymentJournal.Web/Shared/MainLayout.razor
+++ b/PaymentJournal.Web/Shared/MainLayout.razor
@@ -17,10 +17,9 @@
         <NavMenu/>
     </MudDrawer>
     <MudMainContent>
-        <MudPaper Width="100%" Class="darkbackground">
+        <MudPaper Width="100%" Class="page">
             <MudContainer >
                 @Body
-
                 <footer class="py-3 my-4">
                     <div class="border-bottom pb-3 mb-3"></div>
                     <p class="text-center text-muted">&copy; 2019-2022 AmaraCode LLC</p>
