--- a/PaymentJournal.Web/Pages/Components/Payments.razor
+++ b/PaymentJournal.Web/Pages/Components/Payments.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>@Budget.Name - Payments</PageTitle>
 
-<MonthYearSelector ReturnURL="@GetReturnURL"/>
+<MonthYearSelector ReturnURL="@GetReturnURL" OnSearch="@Search" />
 
 
 <MudPaper Width="100%" Square="false" Class="pa-5 ma-2 infobox" Outlined="true" Elevation="1">
