updated data file

--- a/PaymentJournal.Web/Shared/NavMenu.razor
+++ b/PaymentJournal.Web/Shared/NavMenu.razor
@@ -5,7 +5,7 @@
     <MudNavLink Class="navlink" Href="budget/view" Icon="@Icons.Filled.Receipt" Match="NavLinkMatch.All">Last Saved Budget</MudNavLink>
     <MudNavLink Class="navlink" Href="/budgets" Icon="@Icons.Filled.Ballot" Match="NavLinkMatch.Prefix">Budgets</MudNavLink>
     <MudDivider DividerType="DividerType.Middle" />
-    <MudAlert Severity="Severity.Warning" NoIcon="true" ContentAlignment="HorizontalAlignment.Center" Class="my-2">AmaraCode LLC</MudAlert>
+    <MudAlert Severity="Severity.Info" NoIcon="true" ContentAlignment="HorizontalAlignment.Center" Class="my-2">AmaraCode LLC</MudAlert>
     @*   <MudNavGroup Title="Settings" Expanded="true">
     <MudNavLink Href="/users" Match="NavLinkMatch.Prefix">Users</MudNavLink>
     <MudNavLink Href="/security" Match="NavLinkMatch.Prefix">Security</MudNavLink>
