--- a/PaymentJournal.Web/Pages/Components/Budgets.razor
+++ b/PaymentJournal.Web/Pages/Components/Budgets.razor
@@ -1,4 +1,5 @@
-﻿@page "/budgets"
+﻿@page "/"
+@page "/budgets"
 
 
 <MudPaper Width="100%" Square="false" Class="pa-5 ma-2 infobox" Outlined="true">
