--- a/PaymentJournal.Web/Shared/NavMenu.razor
+++ b/PaymentJournal.Web/Shared/NavMenu.razor
@@ -2,7 +2,7 @@
 
 
 <MudNavMenu>
-    <MudNavLink Class="navlink" Href="budget/view" Icon="@Icons.Filled.Receipt" Match="NavLinkMatch.All">Last Saved Budget</MudNavLink>
+    @* <MudNavLink Class="navlink" Href="budget/view" Icon="@Icons.Filled.Receipt" Match="NavLinkMatch.All">Last Saved Budget</MudNavLink> *@
     <MudNavLink Class="navlink" Href="/budgets" Icon="@Icons.Filled.Ballot" Match="NavLinkMatch.Prefix">Budgets</MudNavLink>
     <MudDivider DividerType="DividerType.Middle" />
     <MudAlert Severity="Severity.Info" NoIcon="true" ContentAlignment="HorizontalAlignment.Center" Class="my-2">AmaraCode LLC</MudAlert>
